--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "mongoose": "^7.4.3",
     "mongoose-type-url": "^2.1.0",
     "mongoose-validator": "^2.1.0",
