--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "cron": "^3.3.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
+    "googleapis": "^144.0.0",
     "mongoose": "^7.4.3",
     "mongoose-type-url": "^2.1.0",
     "mongoose-validator": "^2.1.0",
