update: readme & example env

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,7 @@
-MONGODB_URI=mongodb://user:password@localhost:27017
-PORT=3002
-TOKEN=123456
+MONGODB_URI=
+PORT=
+TOKEN=
+SHEET_PRIVATE_KEY=
+SHEET_SPREADSHEET_ID=
+SHEET_PAGE=
+CLIENT_EMAIL=
